# climate-rag

./: .bedrock_agentcore.yaml  .coverage  .flake8  .gitignore  DEPLOYMENT.md  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  load-tests.yml
.kiro/hooks/: auto-test-on-save.kiro.hook  block-aws-deletion.kiro.hook  lint-and-format-on-save.kiro.hook  performance-analysis.kiro.hook  security-scan-on-Python-code-change.kiro.hook  security-scan-on-dependency-change.kiro.hook  update-documentation.kiro.hook  verify-resource-tags.kiro.hook
.kiro/steering/: aws-provisioning-policy.md  coding-guidelines.md  development-standards.md  development-workflow.md  project-context.md
agent/: latency_tracker.py  main.py  requirements.txt  tracing.py
cdk/: README.md  app.py
docs/: 01-requirements.md  02-architecture-design.md  03-architecture-decision-records.md  04-data-flow-integration.md  05-cost-analysis.md  06-security-compliance.md  07-observability-evaluation.md  08-implementation-plan.md  09-deployment-runbook.md  10-dataset-reference.md  11-cdk-infrastructure-guide.md  11-testing.md  12-changelog.md  ClimateRAG_Presentation.pptx  README.md  presentation.md  rag-agentcore-doc.md  ~$ClimateRAG_Presentation.pptx
eval/: eval_config.py  golden_dataset.py  judge.py  metrics.py  run.py  run_eval  run_eval.py  run_keyword_eval.py  run_multiturn_eval.py  run_retrieval_eval.py
infra/: _debug_memory.py  deploy.sh  provision_agentcore.py  setup_all.py  setup_code_interpreter.py  setup_gateway.py  setup_guardrails.py  setup_memory.py  setup_observability.py  tf_agentcore.py
ingest/: build_index.py  cleanup.py  embeddings.py  index_versioning.py  ingest_all.py  ingest_ghcn.py  ingest_gistemp.py  ingest_power.py
terraform/: agentcore.tf  climate_rag_plan  filter.jq  main.tf  outputs.tf  providers.tf  variables.tf
tests/: __init__.py  conftest.py
ui/: app.py
(+99 files in other folders)
