[project]
name = "climate-rag"
version = "1.0.0"
description = "Production-grade RAG pipeline for historical climate trend analysis"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests that require AWS credentials (deselect with '-m \"not integration\"')",
    "load: marks load/stress tests that require deployed infrastructure (deselect with '-m \"not load\"')",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["agent", "gateway", "ingest", "cdk/custom_resources"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["agent", "ingest", "gateway", "cdk/custom_resources"]
omit = ["tests/*", ".venv/*", "ingest/ingest_gistemp.py", "ingest/ingest_power.py", "ingest/ingest_all.py", "ingest/cleanup.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
